--- a/.gitignore
+++ b/.gitignore
@@ -92,4 +92,4 @@ buildNumber.properties
 *.class
 *.log
 
-# End of https://www.gitignore.io/api/scala,maven,intellij+all
+src/test/resources/output
