--- a/src/test/resources/conf/workflowAndCoordinator.conf
+++ b/src/test/resources/conf/workflowAndCoordinator.conf
@@ -48,10 +48,11 @@ workflow {
     {
       name:"hiveAction"
       type: "hive"
-      hive-settings-xml: "settings"
+      job-xml: "settings"
       script-name: "script.hql"
       script-location: "/some/location"
       parameters: []
+      files: []
       configuration: {}
       ok-to: "shellAction"
       error-to: "errorEmail"
