--- a/src/test/resources/conf/invalidValidationString.conf
+++ b/src/test/resources/conf/invalidValidationString.conf
@@ -28,7 +28,7 @@ workflow {
     {
       name:"sparkAction"
       type:"spark"
-      spark-settings: "someSettings"
+      job-xml: "someSettings"
       spark-master-url: "masterurl"
       spark-mode: "mode"
       spark-job-name: "Jobname"
