--- a/src/test/resources/conf/workflowOnly.conf
+++ b/src/test/resources/conf/workflowOnly.conf
@@ -11,6 +11,7 @@ workflow {
       credentials4:"value4"
     }
   }
+  job-xml: "/path/to/job.xml"
   transitions: [
     {
       type:"start"
@@ -28,7 +29,7 @@ workflow {
     {
       name:"sparkAction"
       type:"spark"
-      spark-settings: "someSettings"
+      job-xml: "someSettings"
       spark-master-url: "masterurl"
       spark-mode: "mode"
       spark-job-name: "Jobname"
