feature/addSLASupport: added SLA support for workflows in HOCON

--- a/src/test/resources/conf/slas.conf
+++ b/src/test/resources/conf/slas.conf
@@ -200,6 +200,7 @@ workflow {
     name-node: "someNameNode"
     job-tracker: "someJobTracker"
   }
+  sla: ${workflowSLA}
 }
 coordinator: {
   name: "someCoordinator"
@@ -224,4 +225,15 @@ actionSLA : {
   alert-contacts: ["a@a.com", "b@b.com"]
   notification-message:  ${workflow.name} "is breaching SLA"
   upstream-applications: ["app1", "app2"]
+}
+
+workflowSLA: {
+  nominal-time: ${actionSLA.nominal-time}
+  should-start: ${actionSLA.should-start}
+  should-end: "120 * MINUTES"
+  max-duration: "120 * MINUTES"
+  alert-events: ${actionSLA.alert-events}
+  alert-contacts: ${actionSLA.alert-contacts}
+  notification-message:  ${actionSLA.notification-message}
+  upstream-applications: ${actionSLA.upstream-applications}
 }
