feature/addSLASupport:updated readme

--- a/src/test/resources/conf/workflowAndCoordinator.conf
+++ b/src/test/resources/conf/workflowAndCoordinator.conf
@@ -1,3 +1,82 @@
+actions: {
+  start: {
+    type:"start"
+    ok-to:${actions.decisionNode.name}
+  }
+  decisionNode: {
+    name:"decisionNode"
+    type:"decision"
+    default: ${actions.sparkAction.name}
+    switches: {
+      sparkAction: "someVar eq 1"
+      hiveAction: "someOtherVar eq someVar"
+    }
+  }
+  sparkAction: {
+    name:"sparkAction"
+    type:"spark"
+    job-xml: "someSettings"
+    spark-master-url: "masterurl"
+    spark-mode: "mode"
+    spark-job-name: "Jobname"
+    main-class: "somemainclass"
+    spark-jar: "spark.jar"
+    spark-options: "spark-options"
+    command-line-arguments: []
+    prepare: {
+      delete: "deletePath"
+      mkdir: "makePath"
+    }
+    files: []
+    configuration: {}
+    ok-to: ${actions.shellAction.name}
+    error-to: ${actions.errorEmail.name}
+  }
+  hiveAction: {
+    name:"hiveAction"
+    type: "hive"
+    job-xml: "settings"
+    script-name: "script.hql"
+    script-location: "/some/location"
+    parameters: []
+    files: []
+    configuration: {}
+    ok-to: ${actions.shellAction.name}
+    error-to: ${actions.errorEmail.name}
+  }
+  shellAction: {
+    name:"shellAction"
+    type:"shell"
+    script-name: "script.sh"
+    script-location: "/some/location"
+    command-line-arguments: []
+    environment-variables: []
+    files: []
+    configuration: {}
+    ok-to: ${actions.end.name}
+    error-to: ${actions.errorEmail.name}
+  }
+  errorEmail: {
+    name:"errorEmail"
+    type:"email"
+    to: ["a@a.com"]
+    cc: []
+    subject: "hello"
+    body: "yep"
+    ok-to: ${actions.kill.name}
+    error-to: ${actions.kill.name}
+  }
+  kill: {
+    name: "kill"
+    type: "kill"
+    message: "workflow is kill"
+  }
+  end: {
+    name: "end"
+    type:"end"
+  }
+}
+
 workflow {
   name: "someworkflow"
   path: "somepath"
@@ -12,80 +91,14 @@ workflow {
     }
   }
   transitions: [
-    {
-      type:"start"
-      ok-to:"decisionNode"
-    },
-    {
-      name:"decisionNode"
-      type:"decision"
-      default: "sparkAction"
-      switches: {
-        sparkAction: "someVar eq 1"
-        hiveAction: "someOtherVar eq someVar"
-      }
-    }
-    {
-      name:"sparkAction"
-      type:"spark"
-      job-xml: "someSettings"
-      spark-master-url: "masterurl"
-      spark-mode: "mode"
-      spark-job-name: "Jobname"
-      main-class: "somemainclass"
-      spark-jar: "spark.jar"
-      spark-options: "spark-options"
-      command-line-arguments: []
-      prepare: {
-        delete: "deletePath"
-        mkdir: "makePath"
-      }
-      files: []
-      configuration: {}
-      ok-to: "shellAction"
-      error-to: "errorEmail"
-    },
-    {
-      name:"hiveAction"
-      type: "hive"
-      job-xml: "settings"
-      script-name: "script.hql"
-      script-location: "/some/location"
-      parameters: []
-      files: []
-      configuration: {}
-      ok-to: "shellAction"
-      error-to: "errorEmail"
-    },
-    {
-      name:"shellAction"
-      type:"shell"
-      script-name: "script.sh"
-      script-location: "/some/location"
-      command-line-arguments: []
-      environment-variables: []
-      files: []
-      configuration: {}
-      ok-to: "end"
-      error-to: "errorEmail"
-    },
-    {
-      name:"errorEmail"
-      type:"email"
-      to: ["a@a.com"]
-      cc: []
-      subject: "hello"
-      body: "yep"
-      ok-to: "kill"
-      error-to: "kill"
-    },
-    {
-      type: "kill"
-      message: "workflow is kill"
-    },
-    {
-      type:"end"
-    }
+    ${actions.start},
+    ${actions.decisionNode},
+    ${actions.sparkAction},
+    ${actions.hiveAction},
+    ${actions.shellAction},
+    ${actions.errorEmail},
+    ${actions.kill},
+    ${actions.end}
   ]
   configuration: {
     workflow1:"value1",
