bugfix/quickstartTesting: changes after testing on quickstart VM

--- a/src/test/resources/conf/invalidValidationString.conf
+++ b/src/test/resources/conf/invalidValidationString.conf
@@ -100,6 +100,7 @@ workflow {
 }
 coordinator: {
   name: "someCoordinator"
+  path: "somepath"
   frequency: "someFreq"
   start: "someStart"
   end: "someEnd"
