--- a/src/test/resources/conf/slas.conf
+++ b/src/test/resources/conf/slas.conf
@@ -204,6 +204,7 @@ workflow {
 }
 coordinator: {
   name: "someCoordinator"
+  path: "somepath"
   frequency: "someFreq"
   start: "someStart"
   end: "someEnd"
