--- a/src/test/resources/conf/workflowAndCoordinator.conf
+++ b/src/test/resources/conf/workflowAndCoordinator.conf
@@ -113,6 +113,7 @@ workflow {
 }
 coordinator: {
   name: "someCoordinator"
+  path: "somepath"
   frequency: "someFreq"
   start: "someStart"
   end: "someEnd"
