--- a/src/test/resources/conf/it/it.conf
+++ b/src/test/resources/conf/it/it.conf
@@ -56,7 +56,7 @@ actions: {
     environment-variables: []
     files: []
     configuration: {}
-    ok-to: ${actions.distCPAction.name}
+    ok-to: ${actions.decisionAction.name}
     error-to: ${actions.errorEmail.name}
     sla:  {
       nominal-time: "${nominalTime}"
@@ -69,17 +69,37 @@ actions: {
       upstream-applications: ["application-a","application-b"]
     }
   }
-  distCPAction: {
-    name: "distCPAction"
-    type: "distcp"
-    arguments: [${app.path}/testing2/file, ${app.path}/testing3/file]
-    java-options: ""
-    configuration: {}
-    prepare: {
-      delete: ${app.path}/testing3
-      mkdir: ${app.path}/testing3
+  decisionAction: {
+    name:"decisionAction"
+    type:"decision"
+    default: ${actions.javaAction.name}
+    switches: {
+      javaAction: "${errorEmail_to eq 'a@a.com'}"
+      sshAction: "${errorEmail_to eq 'b@a.com'}"
     }
-    ok-to: ${actions.end.name}
+  }
+  javaAction: {
+    name: "javaAction"
+    type: "java"
+    main-class: "org.antipathy.scoozie.Scoozie"
+    java-jar: "scoozie_2.12-0.4.3.jar"
+    java-options: ""
+    command-line-arguments: []
+    files: []
+    capture-output: true //optional
+    configuration: {}
+    prepare: {}
+    ok-to:  ${actions.fsAction2.name}
+    error-to: ${actions.fsAction2.name}
+  }
+  sshAction: {
+    name: "sshAction"
+    type: "ssh"
+    host: "cloudera@localhost"
+    command: "ls -la"
+    capture-output: true //optional
+    command-line-arguments: []
+    ok-to: ${actions.fsAction2.name}
     error-to: ${actions.errorEmail.name}
   }
   errorEmail: {
@@ -87,15 +107,26 @@ actions: {
     type:"email"
     to: ["a@a.com"]
     cc: []
-    subject: "hello"
+    subject: "${wf:name()} failed on ${wf:lastErrorNode}"
     body: "yep"
     ok-to: ${actions.kill.name}
     error-to: ${actions.kill.name}
   }
+  fsAction2: {
+    name: "cleanUp"
+    type: "filesystem"
+    configuration: {}
+    steps: [
+      {delete: ${app.path}/testing},
+      {delete: ${app.path}/testing2}
+    ]
+    ok-to: ${actions.end.name}
+    error-to: ${actions.errorEmail.name}
+  }
   kill: {
     name: "kill"
     type: "kill"
-    message: "workflow is kill"
+    message: "${wf:name()} failed on ${wf:lastErrorNode}"
   }
   end: {
     name: "end"
@@ -113,8 +144,11 @@ workflow {
     ${actions.fsAction},
     ${actions.mainJoin},
     ${actions.shellAction},
-    ${actions.distCPAction},
+    ${actions.decisionAction},
+    ${actions.javaAction},
+    ${actions.sshAction},
     ${actions.errorEmail},
+    ${actions.fsAction2},
     ${actions.kill},
     ${actions.end}
   ]
