Updated readme with details of Hue issue

--- a/src/test/resources/conf/it/it.conf
+++ b/src/test/resources/conf/it/it.conf
@@ -17,7 +17,7 @@ actions: {
     type: "hive"
     script-name: "hiveScript.hql"
     script-location: ${app.path}/${actions.hiveAction.script-name}
-    parameters: []
+    parameters: ["P=1","Q=2"]
     files: [${actions.hiveAction.script-name}]
     configuration: {
       test:"one"
@@ -83,7 +83,7 @@ actions: {
     type: "java"
     main-class: "org.antipathy.scoozie.Scoozie"
     java-jar: "scoozie_2.12-0.4.3.jar"
-    java-options: ""
+    java-options: "-Dsome=value"
     command-line-arguments: []
     files: []
     capture-output: true //optional
@@ -159,7 +159,7 @@ workflow {
     workflow4:"value4"
   }
   yarn-config {
-    name-node: "hdfs://quickstart.cloudera"
+    name-node: "hdfs://quickstart.cloudera:8020"
     job-tracker: "quickstart.cloudera:8032"
   }
 }
